k8s/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pro-backend
  namespace: pro-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pro-backend
  template:
    metadata:
      labels:
        app: pro-backend
    spec:
      containers:
        - name: backend-container
          image: 827919544150.dkr.ecr.ap-south-1.amazonaws.com/pro-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pro-backend-service
  namespace: pro-production
spec:
  type: NodePort
  selector:
    app: pro-backend
  ports:
    - port: 5000
      targetPort: 5000
